--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<div></div>
 <script> window.location.href="http://cryptic-island-9995.herokuapp.com/"</script>
+<link rel="apple-touch-icon" href="BackBeat.png">
 </html>
