--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+<head>
+	<link rel="apple-touch-icon" href="BackBeat.png"></link>
+	<link rel="apple-touch-icon-precomposed" href="BackBeat.png"></link>
+	<icon src="BackBeat.png"></link>
+</head>
 <script> window.location.href="http://cryptic-island-9995.herokuapp.com/"</script>
-<link rel="apple-touch-icon" href="BackBeat.png">
 </html>
