--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-	<link rel="apple-touch-icon" href="BackBeat.png"></link>
-	<link rel="apple-touch-icon-precomposed" href="BackBeat.png"></link>
-	<icon src="BackBeat.png"></link>
+	<link rel="apple-touch-icon" href="BackBeatiPhone.png"></link>
+	<link rel="apple-touch-icon-precomposed" href="BackBeatiPhone.png"></link>
+	<icon src="BackBeatiPhone.png"></link>
 </head>
 <script> window.location.href="http://cryptic-island-9995.herokuapp.com/"</script>
 </html>
