--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="apple-touch-icon" href="BackBeatiPhone.png"></link>
 	<link rel="apple-touch-icon-precomposed" href="BackBeatiPhone.png"></link>
-	<icon src="BackBeatiPhone.png"></link>
+	<icon src="BackBeatiPhone.png"></icon>
 </head>
 <script> window.location.href="http://cryptic-island-9995.herokuapp.com/"</script>
 </html>
